# WinDirScope

./: .gitignore  App.css  Cargo.toml  README.md  hackathon_pitch.md.resolved  index.css  results-entry.jsx
components/: Landing.jsx  Results.jsx
windirscope-app/: index.html  package-lock.json  package.json  results.html
windirscope-app/src/: .gitignore  App.css  App.jsx  README.md  ResultsWindow.jsx  index.css  main.jsx  results-entry.jsx
windirscope-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windirscope-app/src-tauri/src/: duplicates.rs  graph.rs  main.rs  treemap.rs
windirscope-app/src/components/: CyberBackground.jsx  ErrorModal.jsx  ForceGraphView.jsx  HoloExplorer.css  HoloExplorer.jsx  Landing.jsx  Results.jsx  Scanning.jsx  Treemap.jsx
windirscope-app/src/windirscope-app/: results.html  vite.config.js
windirscope-app/src/windirscope-app/src-tauri/: tauri.conf.json
windirscope-app/src/windirscope-cli/: Cargo.toml
windirscope-app/src/windirscope-core/src/: error.rs  tree.rs
windirscope-app/src/windirscope-scanner/src/: lib.rs  scanner.rs
windirscope-cli/src/: main.rs
windirscope-core/: Cargo.toml
windirscope-core/src/: config.rs  event.rs  lib.rs
windirscope-core/tests/: core_tests.rs
windirscope-scanner/: Cargo.toml
windirscope-scanner/tests/: scan_integration.rs
