[package]
name = "windirscope-app"
version = "0.1.0"
edition = "2021"
default-run = "windirscope-app"

[[bin]]
name = "windirscope-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "1", features = [ "dialog-confirm", "dialog-message", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windirscope-core = { path = "../../windirscope-core" }
windirscope-scanner = { path = "../../windirscope-scanner" }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
